Streak Functionality API Implemented